pkg/unify-query/internal/querystring_parser/y.output

state 0
	$accept: .input $end 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 7
	tPLUS  shift 10
	tMINUS  shift 11
	tLEFTBRACKET  shift 6
	.  error

	searchBase  goto 9
	searchLogicParts  goto 2
	searchPart  goto 5
	searchLogicPart  goto 3
	searchLogicSimplePart  goto 4
	searchPrefix  goto 8
	input  goto 1

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  searchLogicParts.    (1)

	.  reduce 1 (src line 30)


state 3
	searchLogicParts:  searchLogicPart.searchLogicParts 
	searchLogicParts:  searchLogicPart.    (3)

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 7
	tPLUS  shift 10
	tMINUS  shift 11
	tLEFTBRACKET  shift 6
	.  reduce 3 (src line 39)

	searchBase  goto 9
	searchLogicParts  goto 17
	searchPart  goto 5
	searchLogicPart  goto 3
	searchLogicSimplePart  goto 4
	searchPrefix  goto 8

state 4
	searchLogicPart:  searchLogicSimplePart.    (4)
	searchLogicPart:  searchLogicSimplePart.tOR searchLogicPart 
	searchLogicPart:  searchLogicSimplePart.tAND searchLogicPart 

	tOR  shift 18
	tAND  shift 19
	.  reduce 4 (src line 45)


state 5
	searchLogicSimplePart:  searchPart.    (7)

	.  reduce 7 (src line 59)


state 6
	searchLogicSimplePart:  tLEFTBRACKET.searchLogicPart tRIGHTBRACKET 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 7
	tPLUS  shift 10
	tMINUS  shift 11
	tLEFTBRACKET  shift 6
	.  error

	searchBase  goto 9
	searchPart  goto 5
	searchLogicPart  goto 20
	searchLogicSimplePart  goto 4
	searchPrefix  goto 8

state 7
	searchLogicSimplePart:  tNOT.searchLogicSimplePart 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 7
	tPLUS  shift 10
	tMINUS  shift 11
	tLEFTBRACKET  shift 6
	.  error

	searchBase  goto 9
	searchPart  goto 5
	searchLogicSimplePart  goto 21
	searchPrefix  goto 8

state 8
	searchPart:  searchPrefix.searchBase 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	.  error

	searchBase  goto 22

state 9
	searchPart:  searchBase.    (11)

	.  reduce 11 (src line 81)


state 10
	searchPrefix:  tPLUS.    (12)

	.  reduce 12 (src line 86)


state 11
	searchPrefix:  tMINUS.    (13)

	.  reduce 13 (src line 90)


state 12
	searchBase:  tSTRING.    (14)
	searchBase:  tSTRING.tCOLON tSLASH 
	searchBase:  tSTRING.tCOLON tREGEX 
	searchBase:  tSTRING.tCOLON tSTRING 
	searchBase:  tSTRING.tCOLON tLEFTBRACKET tSTRING tRIGHTBRACKET 
	searchBase:  tSTRING.tCOLON posOrNegNumber 
	searchBase:  tSTRING.tCOLON tPHRASE 
	searchBase:  tSTRING.tLESS posOrNegNumber 
	searchBase:  tSTRING.tGREATER posOrNegNumber 
	searchBase:  tSTRING.tLESS tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tGREATER tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tLESS posOrNegNumber 
	searchBase:  tSTRING.tCOLON tLESS tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER tPHRASE 
	searchBase:  tSTRING.tCOLON tGREATER tEQUAL tPHRASE 
	searchBase:  tSTRING.tCOLON tLESS tPHRASE 
	searchBase:  tSTRING.tCOLON tLESS tEQUAL tPHRASE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACES tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACES posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTBRACES posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACES tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACKET searchExpr tRIGHTBRACKET 

	tCOLON  shift 23
	tGREATER  shift 25
	tLESS  shift 24
	.  reduce 14 (src line 95)


state 13
	searchBase:  tNUMBER.    (15)

	.  reduce 15 (src line 99)


state 14
	searchBase:  tPHRASE.    (16)

	.  reduce 16 (src line 103)


state 15
	searchBase:  tSLASH.    (18)

	.  reduce 18 (src line 115)


state 16
	searchBase:  tREGEX.    (19)

	.  reduce 19 (src line 121)


state 17
	searchLogicParts:  searchLogicPart searchLogicParts.    (2)

	.  reduce 2 (src line 35)


state 18
	searchLogicPart:  searchLogicSimplePart tOR.searchLogicPart 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 7
	tPLUS  shift 10
	tMINUS  shift 11
	tLEFTBRACKET  shift 6
	.  error

	searchBase  goto 9
	searchPart  goto 5
	searchLogicPart  goto 26
	searchLogicSimplePart  goto 4
	searchPrefix  goto 8

state 19
	searchLogicPart:  searchLogicSimplePart tAND.searchLogicPart 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 7
	tPLUS  shift 10
	tMINUS  shift 11
	tLEFTBRACKET  shift 6
	.  error

	searchBase  goto 9
	searchPart  goto 5
	searchLogicPart  goto 27
	searchLogicSimplePart  goto 4
	searchPrefix  goto 8

state 20
	searchLogicSimplePart:  tLEFTBRACKET searchLogicPart.tRIGHTBRACKET 

	tRIGHTBRACKET  shift 28
	.  error


state 21
	searchLogicSimplePart:  tNOT searchLogicSimplePart.    (9)

	.  reduce 9 (src line 67)


state 22
	searchPart:  searchPrefix searchBase.    (10)

	.  reduce 10 (src line 72)


state 23
	searchBase:  tSTRING tCOLON.tSLASH 
	searchBase:  tSTRING tCOLON.tREGEX 
	searchBase:  tSTRING tCOLON.tSTRING 
	searchBase:  tSTRING tCOLON.tLEFTBRACKET tSTRING tRIGHTBRACKET 
	searchBase:  tSTRING tCOLON.posOrNegNumber 
	searchBase:  tSTRING tCOLON.tPHRASE 
	searchBase:  tSTRING tCOLON.tGREATER posOrNegNumber 
	searchBase:  tSTRING tCOLON.tGREATER tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON.tLESS posOrNegNumber 
	searchBase:  tSTRING tCOLON.tLESS tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON.tGREATER tPHRASE 
	searchBase:  tSTRING tCOLON.tGREATER tEQUAL tPHRASE 
	searchBase:  tSTRING tCOLON.tLESS tPHRASE 
	searchBase:  tSTRING tCOLON.tLESS tEQUAL tPHRASE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTBRACES tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTBRACES posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING tCOLON.tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTBRACES 
	searchBase:  tSTRING tCOLON.tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING tCOLON.tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTBRACES 
	searchBase:  tSTRING tCOLON.tLEFTBRACES posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTBRACES tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING tCOLON.tLEFTBRACKET searchExpr tRIGHTBRACKET 

	tSTRING  shift 31
	tPHRASE  shift 34
	tNUMBER  shift 39
	tSLASH  shift 29
	tREGEX  shift 30
	tMINUS  shift 40
	tLEFTBRACKET  shift 32
	tLEFTRANGE  shift 37
	tLEFTBRACES  shift 38
	tGREATER  shift 35
	tLESS  shift 36
	.  error

	posOrNegNumber  goto 33

state 24
	searchBase:  tSTRING tLESS.posOrNegNumber 
	searchBase:  tSTRING tLESS.tEQUAL posOrNegNumber 

	tNUMBER  shift 39
	tMINUS  shift 40
	tEQUAL  shift 42
	.  error

	posOrNegNumber  goto 41

state 25
	searchBase:  tSTRING tGREATER.posOrNegNumber 
	searchBase:  tSTRING tGREATER.tEQUAL posOrNegNumber 

	tNUMBER  shift 39
	tMINUS  shift 40
	tEQUAL  shift 44
	.  error

	posOrNegNumber  goto 43

state 26
	searchLogicPart:  searchLogicSimplePart tOR searchLogicPart.    (5)

	.  reduce 5 (src line 49)


state 27
	searchLogicPart:  searchLogicSimplePart tAND searchLogicPart.    (6)

	.  reduce 6 (src line 53)


state 28
	searchLogicSimplePart:  tLEFTBRACKET searchLogicPart tRIGHTBRACKET.    (8)

	.  reduce 8 (src line 63)


state 29
	searchBase:  tSTRING tCOLON tSLASH.    (17)

	.  reduce 17 (src line 109)


state 30
	searchBase:  tSTRING tCOLON tREGEX.    (20)

	.  reduce 20 (src line 127)


state 31
	searchBase:  tSTRING tCOLON tSTRING.    (21)

	.  reduce 21 (src line 133)


state 32
	searchBase:  tSTRING tCOLON tLEFTBRACKET.tSTRING tRIGHTBRACKET 
	searchBase:  tSTRING tCOLON tLEFTBRACKET.searchExpr tRIGHTBRACKET 

	tSTRING  shift 45
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 51
	tLEFTBRACKET  shift 49
	.  error

	searchBase  goto 50
	searchAndExpr  goto 47
	searchExpr  goto 46
	searchAtom  goto 48

state 33
	searchBase:  tSTRING tCOLON posOrNegNumber.    (23)

	.  reduce 23 (src line 145)


state 34
	searchBase:  tSTRING tCOLON tPHRASE.    (24)

	.  reduce 24 (src line 151)


state 35
	searchBase:  tSTRING tCOLON tGREATER.posOrNegNumber 
	searchBase:  tSTRING tCOLON tGREATER.tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON tGREATER.tPHRASE 
	searchBase:  tSTRING tCOLON tGREATER.tEQUAL tPHRASE 

	tPHRASE  shift 54
	tNUMBER  shift 39
	tMINUS  shift 40
	tEQUAL  shift 53
	.  error

	posOrNegNumber  goto 52

state 36
	searchBase:  tSTRING tCOLON tLESS.posOrNegNumber 
	searchBase:  tSTRING tCOLON tLESS.tEQUAL posOrNegNumber 
	searchBase:  tSTRING tCOLON tLESS.tPHRASE 
	searchBase:  tSTRING tCOLON tLESS.tEQUAL tPHRASE 

	tPHRASE  shift 57
	tNUMBER  shift 39
	tMINUS  shift 40
	tEQUAL  shift 56
	.  error

	posOrNegNumber  goto 55

state 37
	searchBase:  tSTRING tCOLON tLEFTRANGE.tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE.posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE.tSTRING tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE.posOrNegNumber tTO tSTRING tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE.posOrNegNumber tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE.tPHRASE tTO tPHRASE tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE.posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE.tPHRASE tTO tPHRASE tRIGHTRANGE 

	tSTRING  shift 58
	tPHRASE  shift 60
	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 59

state 38
	searchBase:  tSTRING tCOLON tLEFTBRACES.tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTBRACES.posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTBRACES.posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTBRACES.tPHRASE tTO tPHRASE tRIGHTRANGE 

	tSTRING  shift 61
	tPHRASE  shift 63
	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 62

state 39
	posOrNegNumber:  tNUMBER.    (57)

	.  reduce 57 (src line 378)


state 40
	posOrNegNumber:  tMINUS.tNUMBER 

	tNUMBER  shift 64
	.  error


state 41
	searchBase:  tSTRING tLESS posOrNegNumber.    (25)

	.  reduce 25 (src line 157)


state 42
	searchBase:  tSTRING tLESS tEQUAL.posOrNegNumber 

	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 65

state 43
	searchBase:  tSTRING tGREATER posOrNegNumber.    (26)

	.  reduce 26 (src line 164)


state 44
	searchBase:  tSTRING tGREATER tEQUAL.posOrNegNumber 

	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 66

45: shift/reduce conflict (shift 67(3), red'n 14(0)) on tRIGHTBRACKET
state 45
	searchBase:  tSTRING.    (14)
	searchBase:  tSTRING.tCOLON tSLASH 
	searchBase:  tSTRING.tCOLON tREGEX 
	searchBase:  tSTRING.tCOLON tSTRING 
	searchBase:  tSTRING.tCOLON tLEFTBRACKET tSTRING tRIGHTBRACKET 
	searchBase:  tSTRING tCOLON tLEFTBRACKET tSTRING.tRIGHTBRACKET 
	searchBase:  tSTRING.tCOLON posOrNegNumber 
	searchBase:  tSTRING.tCOLON tPHRASE 
	searchBase:  tSTRING.tLESS posOrNegNumber 
	searchBase:  tSTRING.tGREATER posOrNegNumber 
	searchBase:  tSTRING.tLESS tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tGREATER tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tLESS posOrNegNumber 
	searchBase:  tSTRING.tCOLON tLESS tEQUAL posOrNegNumber 
	searchBase:  tSTRING.tCOLON tGREATER tPHRASE 
	searchBase:  tSTRING.tCOLON tGREATER tEQUAL tPHRASE 
	searchBase:  tSTRING.tCOLON tLESS tPHRASE 
	searchBase:  tSTRING.tCOLON tLESS tEQUAL tPHRASE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACES tSTRING tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACES posOrNegNumber tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTBRACES 
	searchBase:  tSTRING.tCOLON tLEFTBRACES posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACES tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTRANGE 
	searchBase:  tSTRING.tCOLON tLEFTBRACKET searchExpr tRIGHTBRACKET 

	tCOLON  shift 23
	tRIGHTBRACKET  shift 67
	tGREATER  shift 25
	tLESS  shift 24
	.  reduce 14 (src line 95)


state 46
	searchBase:  tSTRING tCOLON tLEFTBRACKET searchExpr.tRIGHTBRACKET 
	searchExpr:  searchExpr.tOR searchAndExpr 

	tOR  shift 69
	tRIGHTBRACKET  shift 68
	.  error


state 47
	searchExpr:  searchAndExpr.    (51)

	.  reduce 51 (src line 348)


state 48
	searchAndExpr:  searchAtom.tAND searchAndExpr 
	searchAndExpr:  searchAtom.    (53)

	tAND  shift 70
	.  reduce 53 (src line 358)


state 49
	searchAtom:  tLEFTBRACKET.searchExpr tRIGHTBRACKET 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 51
	tLEFTBRACKET  shift 49
	.  error

	searchBase  goto 50
	searchAndExpr  goto 47
	searchExpr  goto 71
	searchAtom  goto 48

state 50
	searchAtom:  searchBase.    (55)

	.  reduce 55 (src line 368)


state 51
	searchAtom:  tNOT.searchBase 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	.  error

	searchBase  goto 72

state 52
	searchBase:  tSTRING tCOLON tGREATER posOrNegNumber.    (29)

	.  reduce 29 (src line 185)


state 53
	searchBase:  tSTRING tCOLON tGREATER tEQUAL.posOrNegNumber 
	searchBase:  tSTRING tCOLON tGREATER tEQUAL.tPHRASE 

	tPHRASE  shift 74
	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 73

state 54
	searchBase:  tSTRING tCOLON tGREATER tPHRASE.    (33)

	.  reduce 33 (src line 213)


state 55
	searchBase:  tSTRING tCOLON tLESS posOrNegNumber.    (31)

	.  reduce 31 (src line 199)


state 56
	searchBase:  tSTRING tCOLON tLESS tEQUAL.posOrNegNumber 
	searchBase:  tSTRING tCOLON tLESS tEQUAL.tPHRASE 

	tPHRASE  shift 76
	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 75

state 57
	searchBase:  tSTRING tCOLON tLESS tPHRASE.    (35)

	.  reduce 35 (src line 227)


state 58
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING.tTO posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING.tTO posOrNegNumber tRIGHTBRACES 

	tTO  shift 77
	.  error


state 59
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber.tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber.tTO tSTRING tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber.tTO posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber.tTO posOrNegNumber tRIGHTRANGE 

	tTO  shift 78
	.  error


state 60
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE.tTO tPHRASE tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE.tTO tPHRASE tRIGHTRANGE 

	tTO  shift 79
	.  error


state 61
	searchBase:  tSTRING tCOLON tLEFTBRACES tSTRING.tTO posOrNegNumber tRIGHTRANGE 

	tTO  shift 80
	.  error


state 62
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber.tTO tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber.tTO posOrNegNumber tRIGHTRANGE 

	tTO  shift 81
	.  error


state 63
	searchBase:  tSTRING tCOLON tLEFTBRACES tPHRASE.tTO tPHRASE tRIGHTRANGE 

	tTO  shift 82
	.  error


state 64
	posOrNegNumber:  tMINUS tNUMBER.    (58)

	.  reduce 58 (src line 382)


state 65
	searchBase:  tSTRING tLESS tEQUAL posOrNegNumber.    (27)

	.  reduce 27 (src line 171)


state 66
	searchBase:  tSTRING tGREATER tEQUAL posOrNegNumber.    (28)

	.  reduce 28 (src line 178)


state 67
	searchBase:  tSTRING tCOLON tLEFTBRACKET tSTRING tRIGHTBRACKET.    (22)

	.  reduce 22 (src line 139)


state 68
	searchBase:  tSTRING tCOLON tLEFTBRACKET searchExpr tRIGHTBRACKET.    (49)

	.  reduce 49 (src line 336)


state 69
	searchExpr:  searchExpr tOR.searchAndExpr 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 51
	tLEFTBRACKET  shift 49
	.  error

	searchBase  goto 50
	searchAndExpr  goto 83
	searchAtom  goto 48

state 70
	searchAndExpr:  searchAtom tAND.searchAndExpr 

	tSTRING  shift 12
	tPHRASE  shift 14
	tNUMBER  shift 13
	tSLASH  shift 15
	tREGEX  shift 16
	tNOT  shift 51
	tLEFTBRACKET  shift 49
	.  error

	searchBase  goto 50
	searchAndExpr  goto 84
	searchAtom  goto 48

state 71
	searchExpr:  searchExpr.tOR searchAndExpr 
	searchAtom:  tLEFTBRACKET searchExpr.tRIGHTBRACKET 

	tOR  shift 69
	tRIGHTBRACKET  shift 85
	.  error


state 72
	searchAtom:  tNOT searchBase.    (56)

	.  reduce 56 (src line 372)


state 73
	searchBase:  tSTRING tCOLON tGREATER tEQUAL posOrNegNumber.    (30)

	.  reduce 30 (src line 192)


state 74
	searchBase:  tSTRING tCOLON tGREATER tEQUAL tPHRASE.    (34)

	.  reduce 34 (src line 220)


state 75
	searchBase:  tSTRING tCOLON tLESS tEQUAL posOrNegNumber.    (32)

	.  reduce 32 (src line 206)


state 76
	searchBase:  tSTRING tCOLON tLESS tEQUAL tPHRASE.    (36)

	.  reduce 36 (src line 234)


state 77
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO.posOrNegNumber tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO.posOrNegNumber tRIGHTBRACES 

	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 86

state 78
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO.tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO.tSTRING tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO.posOrNegNumber tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO.posOrNegNumber tRIGHTRANGE 

	tSTRING  shift 87
	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 88

state 79
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO.tPHRASE tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO.tPHRASE tRIGHTRANGE 

	tPHRASE  shift 89
	.  error


state 80
	searchBase:  tSTRING tCOLON tLEFTBRACES tSTRING tTO.posOrNegNumber tRIGHTRANGE 

	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 90

state 81
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber tTO.tSTRING tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber tTO.posOrNegNumber tRIGHTRANGE 

	tSTRING  shift 91
	tNUMBER  shift 39
	tMINUS  shift 40
	.  error

	posOrNegNumber  goto 92

state 82
	searchBase:  tSTRING tCOLON tLEFTBRACES tPHRASE tTO.tPHRASE tRIGHTRANGE 

	tPHRASE  shift 93
	.  error


state 83
	searchExpr:  searchExpr tOR searchAndExpr.    (50)

	.  reduce 50 (src line 344)


state 84
	searchAndExpr:  searchAtom tAND searchAndExpr.    (52)

	.  reduce 52 (src line 354)


state 85
	searchAtom:  tLEFTBRACKET searchExpr tRIGHTBRACKET.    (54)

	.  reduce 54 (src line 364)


state 86
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber.tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber.tRIGHTBRACES 

	tRIGHTRANGE  shift 94
	tRIGHTBRACES  shift 95
	.  error


state 87
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING.tRIGHTRANGE 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING.tRIGHTBRACES 

	tRIGHTRANGE  shift 96
	tRIGHTBRACES  shift 97
	.  error


state 88
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber.tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber.tRIGHTRANGE 

	tRIGHTRANGE  shift 99
	tRIGHTBRACES  shift 98
	.  error


state 89
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO tPHRASE.tRIGHTBRACES 
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO tPHRASE.tRIGHTRANGE 

	tRIGHTRANGE  shift 101
	tRIGHTBRACES  shift 100
	.  error


state 90
	searchBase:  tSTRING tCOLON tLEFTBRACES tSTRING tTO posOrNegNumber.tRIGHTRANGE 

	tRIGHTRANGE  shift 102
	.  error


state 91
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber tTO tSTRING.tRIGHTRANGE 

	tRIGHTRANGE  shift 103
	.  error


state 92
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber tTO posOrNegNumber.tRIGHTRANGE 

	tRIGHTRANGE  shift 104
	.  error


state 93
	searchBase:  tSTRING tCOLON tLEFTBRACES tPHRASE tTO tPHRASE.tRIGHTRANGE 

	tRIGHTRANGE  shift 105
	.  error


state 94
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTRANGE.    (37)

	.  reduce 37 (src line 241)


state 95
	searchBase:  tSTRING tCOLON tLEFTRANGE tSTRING tTO posOrNegNumber tRIGHTBRACES.    (41)

	.  reduce 41 (src line 272)


state 96
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTRANGE.    (38)

	.  reduce 38 (src line 249)


state 97
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO tSTRING tRIGHTBRACES.    (42)

	.  reduce 42 (src line 280)


state 98
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTBRACES.    (43)

	.  reduce 43 (src line 288)


state 99
	searchBase:  tSTRING tCOLON tLEFTRANGE posOrNegNumber tTO posOrNegNumber tRIGHTRANGE.    (47)

	.  reduce 47 (src line 320)


state 100
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTBRACES.    (44)

	.  reduce 44 (src line 296)


state 101
	searchBase:  tSTRING tCOLON tLEFTRANGE tPHRASE tTO tPHRASE tRIGHTRANGE.    (48)

	.  reduce 48 (src line 328)


state 102
	searchBase:  tSTRING tCOLON tLEFTBRACES tSTRING tTO posOrNegNumber tRIGHTRANGE.    (39)

	.  reduce 39 (src line 257)


state 103
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber tTO tSTRING tRIGHTRANGE.    (40)

	.  reduce 40 (src line 265)


state 104
	searchBase:  tSTRING tCOLON tLEFTBRACES posOrNegNumber tTO posOrNegNumber tRIGHTRANGE.    (45)

	.  reduce 45 (src line 304)


state 105
	searchBase:  tSTRING tCOLON tLEFTBRACES tPHRASE tTO tPHRASE tRIGHTRANGE.    (46)

	.  reduce 46 (src line 312)


24 terminals, 12 nonterminals
59 grammar rules, 106/16000 states
1 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 62/240000
12 extra closures
181 shift entries, 1 exceptions
39 goto entries
24 entries saved by goto default
Optimizer space used: output 152/240000
152 table entries, 2 zero
maximum spread: 24, maximum offset: 81
